# epiclang

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini
app/: models.py  tasks.py  urls.py  utils.py  views.py
app/management/commands/: definition.py  resetdb.py  tabimport.py  ytimport.py
app/static/app/css/: about.css  account.css  flashcards.css  learn.css  learn_word.css  review.css  sidebar.css  style.css  watch.css  watch_queue.css
app/static/app/js/: flashcards.js  learn.js  learn_word.js  review.js  video_detail.js  videos.js  watch.js  watch_queue.js
app/templates/: about.html  account.html  all_videos.html  flashcards.html  learn.html  learn_word.html  review.html  sidebar.html  video_detail.html  watch.html  watch_queue.html
app/templates/registration/: login.html  signup.html
app/templatetags/: youtube_extras.py
epiclang/: asgi.py  settings.py  urls.py  wsgi.py
inputquest/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/app/css/: account.css  learn_word.css  review.css  sidebar.css
staticfiles/app/js/: learn_word.js
tests/: test_models.py
