[tool.poetry]
package-mode = false
name = "inputquest"
version = "0.1.0"
description = "A language learning web app with Django"
authors = ["Nathan Yeager <nyeager16@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pandas = "^2.2.3"
youtube-transcript-api = "^0.6.3"
scrapetube = "^2.5.1"
deep-translator = "^1.11.4"
django4-background-tasks = "^1.2.10"
torch = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "inputquest.settings"
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
